create github pages

--- a/contact.html
+++ b/contact.html
@@ -37,12 +37,8 @@
 
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
         <div class="navbar-brand">
-            <span class="navbar-logo">
-                <a href="#">
-                    <img src="assets/images/nrlogo-132x134.jpg" alt="Handyman" title="Buckscounty" style="height: 5.3rem;">
-                </a>
-            </span>
-            <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="index.html">Ranieri Handyman Services</a></span>
+            
+            <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="index.html">&nbsp;Ranieri Handyman Services</a></span>
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <div class="hamburger">
@@ -79,7 +75,7 @@
         <div class="row">
             <div class="col-lg-6 col-md-12 mx-auto mbr-form" data-form-type="formoid">
                 <!--Formbuilder Form-->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="UtB2iG1GzmP/Cp2QoISx5+aLEvw1eSgNqrhe/py2lL2z90DOGT81bg07n7sQ5Oh9ca70hDfkY84zr3rfVyM/NC23OJnp9WNECO8ImR/DIfIPPwzRSZ8IDntN2psICxnV">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="2ZyB+opWLiP/nJmZjta5kEa74ovggNly8HLhcT0fHbskvqwtKOvTuI/+ZRchZrONan5dwcXpSXMh+r++0O3RMPJJvAJ2tqw0JiMlRd8B4NjVO5hA15+vhCXPsMGE8UwP">
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out
                             our form!</div>
@@ -128,7 +124,7 @@
                     <h1 class="mbr-section-title align-left mbr-bold mbr-black pb-3 mbr-fonts-style display-2">Contact Us</h1>
                     <h3 class="mbr-section-subtitle mbr-bold align-left mbr-black mbr-light pb-3 mbr-fonts-style display-7">WE’D LOVE TO HEAR ABOUT YOUR PROJECT</h3>
                     <div class="mbr-section-text mbr-black pb-3 ">
-                        <p class="mbr-text align-left mbr-fonts-style display-7"><strong>No project to small or big</strong></p>
+                        <p class="mbr-text align-left mbr-fonts-style display-7"><strong>No project to small&nbsp;</strong></p>
 
                         <p class="text2 pt-2 align-left mbr-fonts-style display-5"><strong>OUR PHONE NUMBER</strong><br><strong>Tel: 267-544-7317</strong></p>
                     </div>
