--- a/services.html
+++ b/services.html
@@ -34,12 +34,8 @@
 
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
         <div class="navbar-brand">
-            <span class="navbar-logo">
-                <a href="#">
-                    <img src="assets/images/nrlogo-132x134.jpg" alt="Handyman" title="Buckscounty" style="height: 5.3rem;">
-                </a>
-            </span>
-            <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="index.html">Ranieri Handyman Services</a></span>
+            
+            <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="index.html">&nbsp;Ranieri Handyman Services</a></span>
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <div class="hamburger">
