--- a/contact.html
+++ b/contact.html
@@ -59,9 +59,9 @@
                     <a class="nav-link link text-white display-4" href="index.html#content10-f">
                         About Us
                     </a>
-                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="services.html">Services &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="contact.html"><span class="fa fa-phone-square mbr-iconfont mbr-iconfont-btn"></span>267.544.7317 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></li></ul>
+                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="services.html">Services &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="contact.html">267.544.7317 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></li></ul>
             
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm  btn-secondary display-4" href="contact.html">
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm  btn-secondary display-4" href="contact.html"><span class="fa fa-volume-control-phone mbr-iconfont mbr-iconfont-btn"></span>
                     Contact Us
                 </a></div>
       </div>
@@ -75,7 +75,7 @@
         <div class="row">
             <div class="col-lg-6 col-md-12 mx-auto mbr-form" data-form-type="formoid">
                 <!--Formbuilder Form-->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="2ZyB+opWLiP/nJmZjta5kEa74ovggNly8HLhcT0fHbskvqwtKOvTuI/+ZRchZrONan5dwcXpSXMh+r++0O3RMPJJvAJ2tqw0JiMlRd8B4NjVO5hA15+vhCXPsMGE8UwP">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="kIGieSq2YXRI8abbHndwJKr9Vhqbqetfu/0gVypT4d3X9J41dC1zfYQSGdDtk3FI/yW6VmBR1Z/rxRuCABC161JYySGPVc4nXZbNe14S9xOytGUVDuIjO351qbgEgVjL">
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out
                             our form!</div>
