--- a/services.html
+++ b/services.html
@@ -187,18 +187,11 @@
             <div class="col-md-3 col-sm-4">
                 <div class="mb-3 img-logo">
                     <a href="#">
-                        <img src="assets/images/logo1.png" alt="">
+                        <img src="assets/images/mbr-192x134.jpg" alt="" title="">
                     </a>
                 </div>
-                <p class="mb-3 mbr-fonts-style foot-title display-7">
-                    MOBIRISE
-                </p>
-                <p class="mbr-text mbr-fonts-style display-7">
-                    <a href="#" class="text-white">About Us</a>
-                    <br><a href="#" class="text-white">Services</a>
-                    <br><a href="#" class="text-white">Selected Work</a>
-                    <br><a href="#" class="text-white">Get In Touch</a>
-                </p>
+                <p class="mb-3 mbr-fonts-style foot-title display-7">Handyman Services</p>
+                <p class="mbr-text mbr-fonts-style display-7"></p>
             </div>
             <div class="col-md-4 col-sm-8">
                 <p class="mb-4 foot-title mbr-fonts-style display-5">Your Handyman In</p>
@@ -211,7 +204,7 @@
                 <div class="form-block">
                     <div data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="CFgAzMll2X6COgDTsdtvq3O8IwJ43kIf5wfD6mp1WsdejZtfF3lx5nCGIlWNAWd/c58Z9hyDHjy4gOftSgbc1j219HUahGo839ruUL34xhO9+LYe5ybVj4ki+1oqNUSJ">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="lgsmaoOcNI/9PaluHU9TJxbG0ydtUgHJM5EMe6Pf2yFeSWnrzXNF6VQpFgYC/SgO8ksxpPMAqDIrxW+SUYPj15TVN1SagFLbNyS3lytqKLRTz0r0M56DaWB5uEyKMMiS">
                             <div class="form-row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
